# fuzz-reachability

./: .gitignore  Changelog.md  Makefile  README.md
analyzer/: Makefile
analyzer/src/: CallGraph.cpp  CallGraph.h  IndirectResolver.h  JsonReport.cpp  JsonReport.h  Metrics.cpp  Metrics.h  Reachability.cpp  Reachability.h  SVFResolver.cpp  SVFResolver.h  TypeBasedResolver.cpp  TypeBasedResolver.h  main.cpp
analyzer/test/: confidence.ll  depth.ll  dlsym_byname.ll  metrics.ll  metrics_dbg.ll  name_no_dlsym.ll
docs/: EXAMPLES.md  llvm-support.md  svf-notes.md  ziggy.md
driver/reachability/: acquire_c.py  analyze.py  cli.py  link.py  report.py
driver/tests/: conftest.py  test_acquire_c.py  test_analyzer_core.py  test_cli.py  test_link.py  test_reachable_sets.py  test_report.py
fixtures/c_codec_table/: Makefile  expected.json  main.c
fixtures/cpp_complex/: expected.json  not_reached.txt  reachability.json  reached.txt
fixtures/cpp_complex2/: expected.json  not_reached.txt  reachability.json  reached.txt
fixtures/rust_indirect/: Cargo.toml  README.md  build.rs  not_reached.txt  reachability.json  reached.txt  test.sh
fixtures/rust_indirect/src/: main.rs
scripts/: build_svf.sh  select_llvm.sh  setup.sh  setup_venv.sh  svf-objtypeinference-abort.patch  test_matrix.sh
