[package]
name = "rust_ziggy_indirect_calls"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
ziggy = { version = "1.7", default-features = false }
libc = "0.2"

[profile.dev]
debug = true
opt-level = 1
lto = false
codegen-units = 1
panic = "unwind"

[profile.release]
debug = true
opt-level = 1
lto = false
codegen-units = 1
panic = "unwind"
